# Askhole_bazel

./: MODULE.bazel  PRIVACY  build.gradle  settings.gradle
app/: AndroidManifest.xml  BUILD  build.gradle
app/src/main/: AndroidManifest.xml  BUILD
app/src/main/java/io/askhole/: CardStackAdapter.kt  MainActivity.kt  Question.kt  QuestionDiffCallback.kt  QuestionList.kt  SwipeActivity.kt
app/src/main/res/layout/: activity_main.xml  item_question.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
